--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="link-list">
         <ul>
-          <li><a href="/github">Github</a></li>
+          <li><a href="/github">GitHub</a></li>
           <li><a href="/fontend-mentor">Frontend Mentor</a></li>
           <li><a href="/linkedln">LinkedIn</a></li>
           <li><a href="twitter">Twitter</a></li>
@@ -45,9 +45,9 @@
         </ul>
       </div>
     </section>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Pleopop</a>.
+    <div class="attribution" style="margin: 100px; color: white;">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" style="color: white;">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/Pleopop" style="color: white;">Pleopop</a>.
     </div>
   </main>
 </body>
